--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,27 +1,85 @@
-<header>
+<section>
   <div class="center jumbotron">
-    <div class="text-center">
+    <div class="text-center mb-5">
       <h1>オンラインの音楽教室</h1>
     </div>
+    <div class="text-center">
+      <%= link_to '講師になる（登録）', teacher_signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
   </div>
-</header>
-
-<section class="about">
-  <h2>いつでも、どこでも、音楽教室</h2>
 </section>
 
-<section class="about">
-  <h2>講師になるには</h2>
+<section class="mb-5">
+  <h2 class="text-center">いつでも、どこでも、音楽教室</h2>
+  <div class="row">
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">特徴１</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">特徴２</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">特徴３</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+  </div>
 </section>
 
-<section class="about">
-  <h2>レッスンを受けるには</h2>
+<section class="mb-5">
+  <h2 class="text-center">講師になるには</h2>
+  <div class="row">
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">step1</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">step2</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">step3</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+  </div>
+  <div class="text-center">
+      <%= link_to '講師になる（登録）', teacher_signup_path, class: 'btn btn-lg btn-primary mt-3' %>
+    </div>
 </section>
 
-<footer class="footer">
-  <ul>
-    <li><a href="#">操作ガイド</a></li>
-    <li><a href="#">支払方法</a></li>
-    <li><a href="#">利用規約</a></li>
-  </ul>
-</footer>
+<section class=" mb-5">
+  <h2 class="text-center">レッスンを受けるには</h2>
+  <div class="row">
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">step1</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">step2</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+    <div class="col-sm-4 card">
+      <div class="about-title text-center card-header">step3</div>
+      <p class="about-text card-body">
+        text text text text text text text text text
+      </p>
+    </div>
+  </div>
+</section>
