--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item"><a href="#" class="nav-link">ログイン</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">講師登録</a></li>
+        <li class="nav-item"><%= link_to '講師登録', teacher_signup_path, class: 'nav-link' %></li>
         <li class="nav-item"><a href="#" class="nav-link">生徒登録</a></li>
       </ul>
     </div>
