--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -15,7 +15,7 @@
     <p>次に、プロフィールを登録してください。</p>
   </div>
   <div>
-    <a href="#" class="btn btn-primary">プロフィール登録・編集</a>
+    <a href="#" class="btn btn-lg btn-primary">プロフィール登録・編集</a>
   </div>
 
 </div>
