--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,16 @@
-<footer class="footer mt-5 mb-3">
+<footer class="footer bg-dark text-white">
   <div class="row mb-3">
     <div class="col-sm-3">
-      <div class="text-center"><a href="#">講師一覧</a></div>
+      <div class="text-center"><a href="#" class="text-white">講師一覧</a></div>
     </div>
     <div class="col-sm-3">
-      <div class="text-center"><a href="#">操作ガイド</a></div>
+      <div class="text-center"><a href="#" class="text-white">操作ガイド</a></div>
     </div>
     <div class="col-sm-3">
-      <div class="text-center"><a href="#">支払方法</a></div>
+      <div class="text-center"><a href="#" class="text-white">支払方法</a></div>
     </div>
     <div class="col-sm-3">
-      <div class="text-center"><a href="#">利用規約</a></div>
+      <div class="text-center"><a href="#" class="text-white">利用規約</a></div>
     </div>
   </div>
   <div class="text-center">©XXXXX</div>
