--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a href="#" class="nav-link">ログイン</a></li>
         <li class="nav-item"><%= link_to '講師登録', teacher_signup_path, class: 'nav-link' %></li>
-        <li class="nav-item"><a href="#" class="nav-link">生徒登録</a></li>
+        <li class="nav-item"><%= link_to '生徒登録', student_signup_path, class: 'nav-link' %></li>
       </ul>
     </div>
     
