--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,5 +13,5 @@
       <div class="text-center"><a href="#" class="text-white">利用規約</a></div>
     </div>
   </div>
-  <div class="text-center">©XXXXX</div>
+  <div class="text-center">©Music School</div>
 </footer>
