--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,17 @@
+body {
+  margin: 0;
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+
+#wrapper {
+  flex: 1;
+}
+
 .footer {
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 30px;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  margin-top: auto;
 }
