--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,18 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar' %>
-
-    <div class="container">
-      <%= render 'layouts/flash_messages' %>
-
-      <%= yield %>
+      <%= render 'layouts/navbar' %>
+  
+      <div class="container" id="wrapper">
+        <%= render 'layouts/flash_messages' %>
+  
+        <%= yield %>
+        
+      </div>
       
-      <%= render 'layouts/footer' %>
-    </div>
+      <div">
+        <%= render 'layouts/footer' %>
+      </div>
+
   </body>
 </html>
