--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -19,7 +19,7 @@
       </div>
       
       <div class="form-group">
-        <%= f.label :birthday, '誕生日' %>
+        <%= f.label :birthday, '生年月日' %>
         <%= f.date_field :birthday, class: 'form-control' %>
       </div>
       
@@ -34,7 +34,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :password_confirmation, 'パスワード（確認）' %>
+        <%= f.label :password_confirmation, 'パスワード（確認用）' %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
