--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer bg-dark text-white">
   <div class="row mb-3">
     <div class="col-sm-3">
-      <div class="text-center"><a href="#" class="text-white">講師一覧</a></div>
+      <div class="text-center"><%= link_to '講師一覧', teacher_profiles_path %></div>
     </div>
     <div class="col-sm-3">
       <div class="text-center"><a href="#" class="text-white">操作ガイド</a></div>
