--- a/app/views/teacher_profiles/index.html.erb
+++ b/app/views/teacher_profiles/index.html.erb
@@ -1,2 +1,19 @@
-<h1>TeacherProfiles#index</h1>
-<p>Find me in app/views/teacher_profiles/index.html.erb</p>
+<ul class="list-unstyled">
+  <% @teacher_profiles.each do |teacher_profile| %>
+    <li class="media">
+      <img class="mr-2 rounded" src="<%= gravatar_url(teacher_profile.teacher, { size: 50 }) %>" alt="">
+      <div class="media-body">
+        <div>
+          <p><%= teacher_profile.nickname %> さん</p>
+        </div>
+        <div>
+          <p>レッスン：<%= teacher_profile.instrument %>（対象レベル：<%= teacher_profile.level %>）</p>
+        </div>
+        <div>
+          <p><%= link_to 'プロフィール詳細', teacher_profile_path(teacher_profile) %></p>
+        </div>
+      </div>
+    </li>
+  <% end %>
+</ul>
+<%= paginate @teacher_profiles %>
