--- a/app/views/teacher_profiles/show.html.erb
+++ b/app/views/teacher_profiles/show.html.erb
@@ -1,11 +1,4 @@
-  <h1><%= @teacher_profile.nickname %> さん</h1>
-  <div>
-    <p>レッスン：<%= @teacher_profile.instrument %>（対象レベル：<%= @teacher_profile.level %>） <%= @teacher_profile.lesson_fee %>円/1時間</p>
-  </div>
-  <div>
-    自己紹介：
-    <%= @teacher_profile.introduction %>
-  </div>
+<%= render 'teacher_profile_detail', teacher_profile: @teacher_profile %>
   
   <div class="mt-5">
     <%= link_to 'プロフィールの編集', edit_teacher_profile_path(id: current_teacher.id), class: "btn btn-lg btn-primary" %>
@@ -13,4 +6,3 @@
   <div class="mt-2">
     <%= link_to '登録内容を確認する', teacher_path(current_teacher), class: "btn btn-lg btn-primary" %>
   </div>
-
