--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,14 +1,24 @@
 <section>
   <div class="center jumbotron">
+    
     <div class="text-center mb-5">
       <h1>オンラインの音楽教室</h1>
     </div>
+
+    <div class="text-center mb-3">
+      <%= form_tag(search_path, method: :get) do  %>
+        楽器or対象レベルor講師 検索：
+        <%= text_field_tag :search, '', placeholder: '（例）ピアノ' %>
+        <%= submit_tag '検索' %>
+      <% end %>
+    </div>
+    
     <div class="text-center">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 mt-2">
           <%= link_to '講師になる（講師登録）', teacher_signup_path, class: 'btn btn-lg btn-primary' %>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-5 mt-2">
           <%= link_to 'レッスンを受ける（生徒登録）', student_signup_path, class: 'btn btn-lg btn-primary' %>
         </div>
       </div>
