--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <% if teacher_logged_in? %>
-          <li class="nav-item"><%= link_to 'マイページ（講師）', teacher_profile_path(current_teacher), class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'マイページ（講師）', me_path, class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'ログアウト', teacher_logout_path, method: :delete, class: 'nav-link' %></li>
         <% elsif student_logged_in? %>
           <li class="nav-item"><%= link_to 'マイページ（生徒）', student_profile_path(current_student), class: 'nav-link' %></li>
